image init dynic

--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -23,8 +23,10 @@
     "@payloadcms/payload-cloud": "3.53.0",
     "@payloadcms/richtext-lexical": "3.53.0",
     "@payloadcms/ui": "3.53.0",
+    "axios": "^1.11.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "form-data": "^4.0.4",
     "graphql": "^16.8.1",
     "next": "15.4.4",
     "payload": "3.53.0",
