--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -18,18 +18,20 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "^3.53.0",
-    "@payloadcms/next": "3.53.0",
+    "@payloadcms/db-postgres": "^3.63.0",
+    "@payloadcms/email-nodemailer": "^3.63.0",
+    "@payloadcms/graphql": "^3.63.0",
+    "@payloadcms/next": "^3.63.0",
     "@payloadcms/payload-cloud": "3.53.0",
-    "@payloadcms/richtext-lexical": "3.53.0",
-    "@payloadcms/ui": "3.53.0",
+    "@payloadcms/richtext-lexical": "^3.63.0",
+    "@payloadcms/ui": "^3.63.0",
     "axios": "^1.11.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "form-data": "^4.0.4",
     "graphql": "^16.8.1",
     "next": "15.4.4",
-    "payload": "3.53.0",
+    "payload": "^3.63.0",
     "react": "19.1.0",
     "sharp": "0.34.2"
   },
