--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -33,15 +33,20 @@
     "graphql": "^16.8.1",
     "next": "15.4.4",
     "payload": "^3.63.0",
-    "react": "19.1.0",
+
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+
     "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
