--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+     "seed:admin": "node --loader ts-node/esm src/seed/seedAdmin.ts",
     "seed:products": "node --loader ts-node/esm src/seed/seedProducts.ts",
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
