--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-     "seed:admin": "node --loader ts-node/esm src/seed/seedAdmin.ts",
+    "seed:admin": "node --loader ts-node/esm src/seed/seedAdmin.ts",
     "seed:products": "node --loader ts-node/esm src/seed/seedProducts.ts",
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start -p $PORT",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
@@ -34,20 +34,16 @@
     "graphql": "^16.8.1",
     "next": "15.4.4",
     "payload": "^3.63.0",
-
     "react": "18.2.0",
     "react-dom": "18.2.0",
-
     "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
-
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
@@ -61,7 +57,7 @@
     "vitest": "3.2.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0",
+    "node": "20.x",
     "pnpm": "^9 || ^10"
   },
   "pnpm": {
