feat: add cloudinary storage

--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -25,9 +25,12 @@
     "@payloadcms/graphql": "^3.63.0",
     "@payloadcms/next": "^3.63.0",
     "@payloadcms/payload-cloud": "3.53.0",
+    "@payloadcms/plugin-cloud-storage": "^3.65.0",
     "@payloadcms/richtext-lexical": "^3.63.0",
     "@payloadcms/ui": "^3.63.0",
+    "@vercel/blob": "^2.0.0",
     "axios": "^1.11.0",
+    "cloudinary": "^2.8.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "form-data": "^4.0.4",
