--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "mobility:dry-run": "ts-node scripts/import-mobility-dry-run.ts",
+    "mobility:import": "node --loader ts-node/esm scripts/import-mobility.ts",
     "seed:admin": "node --loader ts-node/esm src/seed/seedAdmin.ts",
     "seed:products": "node --loader ts-node/esm src/seed/seedProducts.ts",
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
@@ -25,12 +27,13 @@
     "@payloadcms/graphql": "^3.63.0",
     "@payloadcms/next": "^3.63.0",
     "@payloadcms/payload-cloud": "3.63.0",
+    "@payloadcms/plugin-cloud-storage": "3.63.0",
     "@payloadcms/richtext-lexical": "^3.63.0",
     "@payloadcms/storage-vercel-blob": "^3.63.0",
     "@payloadcms/ui": "^3.63.0",
-    "@payloadcms/plugin-cloud-storage": "3.63.0",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "cross-env": "^7.0.3",
+    "csv-parse": "^6.1.0",
     "dotenv": "16.4.7",
     "form-data": "^4.0.4",
     "graphql": "^16.8.1",
