--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -39,6 +39,7 @@
     "csv-parse": "^6.1.0",
     "dotenv": "16.4.7",
     "form-data": "^4.0.4",
+    "googleapis": "^170.0.0",
     "graphql": "^16.8.1",
     "next": "15.4.8",
     "payload": "^3.63.0",
