--- a/backend-payload/package.json
+++ b/backend-payload/package.json
@@ -29,7 +29,7 @@
     "@payloadcms/email-nodemailer": "^3.63.0",
     "@payloadcms/graphql": "^3.63.0",
     "@payloadcms/next": "^3.63.0",
-    "@payloadcms/payload-cloud": "3.63.0",
+    "@payloadcms/payload-cloud": "^3.65.0",
     "@payloadcms/plugin-cloud-storage": "3.63.0",
     "@payloadcms/richtext-lexical": "^3.63.0",
     "@payloadcms/storage-vercel-blob": "^3.63.0",
